--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6"/>
+    <link rel="stylesheet" href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css"/>
     <style>
       body {
         font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
@@ -39,13 +40,29 @@
         text-transform: uppercase;
       }
 
+      .releaseQueueView {
+        display: inline-block;
+        border: 1px solid green;
+        border-radius: 5px;
+        padding: 10px;
+      }
+
+      .numberInQueue {
+        font-weight: bold;
+        color: green;
+        font-size: larger;
+        border: 1px solid grey;
+        padding: 0px 5px;
+        border-radius: 0px;
+      }
     </style>
   </head>
   <body>
-    ⌛ Checking release queue...
+    ⌛ Checking release queue...!
 
     <script data-requirecontext="_" data-requiremodule="connect-bitbucket" src="https://bitbucket.org/atlassian-connect/all.js"></script>
     <script src="https://unpkg.com/whatwg-fetch@2.0.3/fetch.js"></script>
     <script src="https://unpkg.com/qs@6.5.1/dist/qs.js"></script>
+    <script src="/bitbucket/index.js"></script>
   </body>
 </html>
