Changes cdn for date-fns

--- a/src/static/current-state/index.html
+++ b/src/static/current-state/index.html
@@ -73,7 +73,7 @@
     </div>
   </div>
   <script src="https://unpkg.com/whatwg-fetch@2.0.3/fetch.js"></script>
-  <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.29.0/date_fns.min.js"></script>
   <script src="/current-state/index.js"></script>
 </body>
 
