added title to current status page

--- a/src/static/current-state/index.html
+++ b/src/static/current-state/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Landkid Status</title>
   <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6" />
   <link rel="stylesheet" href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css" />
   <style>
