--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -1,69 +1,75 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css"
+    />
+    <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Oxygen, Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+          sans-serif;
+        font-size: 14px;
+        color: #333;
+      }
 
-<head>
-  <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6" />
-  <link rel="stylesheet" href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css" />
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-      font-size: 14px;
-      color: #333;
-    }
+      table {
+        font-size: 14px;
+      }
 
-    table {
-      font-size: 14px;
-    }
+      h1 {
+        font-size: 1.14285714em;
+        font-style: inherit;
+        font-weight: 600;
+        line-height: 1.25;
+        letter-spacing: -0.006em;
+        margin-top: 24px;
+      }
 
-    h1 {
-      font-size: 1.14285714em;
-      font-style: inherit;
-      font-weight: 600;
-      line-height: 1.25;
-      letter-spacing: -.006em;
-      margin-top: 24px;
-    }
+      h2 {
+        font-size: 1em;
+        font-style: inherit;
+        font-weight: 600;
+        line-height: 1.14285714;
+        letter-spacing: -0.003em;
+        margin-top: 16px;
+      }
 
-    h2 {
-      font-size: 1em;
-      font-style: inherit;
-      font-weight: 600;
-      line-height: 1.14285714;
-      letter-spacing: -.003em;
-      margin-top: 16px;
-    }
+      h3 {
+        color: #5e6c84;
+        font-size: 0.85714286em;
+        font-weight: 600;
+        line-height: 1.33333333;
+        margin-top: 20px;
+        text-transform: uppercase;
+      }
 
-    h3 {
-      color: #5e6c84;
-      font-size: .85714286em;
-      font-weight: 600;
-      line-height: 1.33333333;
-      margin-top: 20px;
-      text-transform: uppercase;
-    }
+      .releaseQueueView {
+        display: inline-block;
+        border: 1px solid green;
+        border-radius: 5px;
+        padding: 10px;
+      }
 
-    .releaseQueueView {
-      display: inline-block;
-      border: 1px solid green;
-      border-radius: 5px;
-      padding: 10px;
-    }
+      .numberInQueue {
+        font-weight: bold;
+        color: green;
+        font-size: larger;
+        border: 1px solid grey;
+        padding: 0px 5px;
+        border-radius: 0px;
+      }
+    </style>
+  </head>
 
-    .numberInQueue {
-      font-weight: bold;
-      color: green;
-      font-size: larger;
-      border: 1px solid grey;
-      padding: 0px 5px;
-      border-radius: 0px;
-    }
-  </style>
-</head>
+  <body>
+    Loading Landkid.... (this can take a while!)
 
-<body>
-  You don't have access to this feature!
-  <br> Talk to the "Fabric Build" room if you think this is a mistake 👌
-
-  <script data-requirecontext="_" data-requiremodule="connect-bitbucket" src="https://bitbucket.org/atlassian-connect/all.js"></script>
-</body>
-
+    <script
+      data-requirecontext="_"
+      data-requiremodule="connect-bitbucket"
+      src="https://bitbucket.org/atlassian-connect/all.js"
+    ></script>
+  </body>
 </html>
