Adds reacrt frontend for bitbucket addon

--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -64,7 +64,7 @@
   </head>
 
   <body>
-    Loading Landkid.... (this can take a while!)
+    <div id="app">Loading Landkid....</div>
 
     <script
       data-requirecontext="_"
