--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,36 +1,71 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Landkid Landing Page</title>
+  <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6" />
+  <link rel="stylesheet" href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css" />
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-      font-size: 14px;
-      color: #333;
+    :root {
+      --main-text-color: #344563;
     }
 
-    table {
+    body {
+      color: var(--main-text-color);
       font-size: 14px;
+      padding: 36px;
+      max-width: 100%;
+      min-width: 480px;
+      box-sizing: border-box;
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      padding: 8 0 8 0;
+    }
+
+    h1 {
+      text-transform: uppercase;
+      font-weight: 400;
+      flex: 1;
+    }
+
+    #page {
+      max-width: 880px;
+      margin: 0 auto;
+    }
+
+    .ak-button {
+      margin-top: 10;
+    }
+
+    a:hover {
+      text-decoration: none;
+      color: #FFFFFF;
     }
   </style>
 </head>
 
 <body>
-  <h1>Landkid</h1>
+  <div id="page">
+    <header>
+      <h1>Landkid</h1>
+    </header>
 
-  <p>Landkid helps you avoid merge hell when merging pull requests.</p>
+    <p>Landkid helps you avoid merge hell when merging pull requests.</p>
 
-  <p>
-    In a nut shell it basically:
-    <ul>
-      <li>Creates a merge queue preventing more than one person merging at a time</li>
-      <li>Rebases your branch build on lastest master so that you
-        <strong>know</strong> master will be green when you merge</li>
-    </ul>
-  </p>
+    <p>
+      In a nut shell it basically:
+      <ul>
+        <li>Creates a merge queue preventing more than one person merging at a time</li>
+        <li>Rebases your branch build on lastest master so that you
+          <strong>know</strong> master will be green when you merge</li>
+      </ul>
+    </p>
 
-  <p>You can look at the current state of Landkid
-    <a href="/current-state">here</a>.
-  </p>
+    <a class="ak-button ak-button__appearance-primary" href="/current-state">Check out the current state of Landkid</a>
+  </div>
 </body>
 
 </html>
