Button text change

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -64,7 +64,7 @@
       </ul>
     </p>
 
-    <a class="ak-button ak-button__appearance-primary" href="/current-state">Check out the current state of Landkid</a>
+    <a class="ak-button ak-button__appearance-primary" href="/current-state">Current state of Landkid</a>
   </div>
 </body>
 
