--- a/src/static/index.html
+++ b/src/static/index.html
@@ -44,7 +44,29 @@
       text-decoration: none;
       color: #FFFFFF;
     }
+
+    .circle-button {
+      margin: auto;
+      margin-top: 50px;
+      display: block;
+      height: 200px;
+      width: 200px;
+      line-height: 200px;
+      border-radius: 50%;
+      color: white;
+      background: #0052CC;
+      text-align: center;
+      text-decoration: none;
+      font-size: 20px;
+    }
+
+    .circle-button:hover {
+      background: #0747A6;
+    }
   </style>
+  <script>
+    
+  </script>
 </head>
 
 <body>
@@ -64,7 +86,7 @@
       </ul>
     </p>
 
-    <a class="ak-button ak-button__appearance-primary" href="/current-state">Current state of Landkid</a>
+    <a class="circle-button" href="/current-state">ENTER LANDKID</a>
   </div>
 </body>
 
