--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,7 +12,7 @@
 
     body {
       color: var(--main-text-color);
-      font-size: 14px;
+      font-size: 1.1rem;
       padding: 36px;
       max-width: 100%;
       min-width: 480px;
@@ -29,6 +29,8 @@
       text-transform: uppercase;
       font-weight: 400;
       flex: 1;
+      font-size: 3.5rem;
+      transition: color 0.5s ease;
     }
 
     #page {
@@ -36,43 +38,94 @@
       margin: 0 auto;
     }
 
-    .ak-button {
-      margin-top: 10;
-    }
-
-    a:hover {
-      text-decoration: none;
-      color: #FFFFFF;
-    }
-
     .circle-button {
       margin: auto;
       margin-top: 50px;
       display: block;
-      height: 200px;
-      width: 200px;
-      line-height: 200px;
+      position: relative;
+      height: 150px;
+      width: 150px;
+      line-height: 150px;
       border-radius: 50%;
       color: white;
       background: #0052CC;
       text-align: center;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 3rem;
     }
 
     .circle-button:hover {
       background: #0747A6;
+      text-decoration: none;
+      color: white;
+    }
+
+    .circle-border-green {
+      position: absolute;
+      top: -7;
+      bottom: -7;
+      left: -7;
+      right: -7;
+      background: transparent;
+      border-radius: 50%;
+      border-left: 4px dashed green;
+      animation-name: RotateClockwise;
+      animation-duration: 8s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
+
+    .circle-border-red {
+      position: absolute;
+      top: -15;
+      bottom: -15;
+      left: -15;
+      right: -15;
+      background: transparent;
+      border-radius: 50%;
+      border-right: 4px dashed red;
+      animation-name: RotateAnticlockwise;
+      animation-duration: 20s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
+
+    @keyframes RotateClockwise {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes RotateAnticlockwise {
+      from {
+        transform: rotate(360deg);
+      }
+      to {
+        transform: rotate(0deg);
+      }
     }
   </style>
   <script>
-    
+    function randomColor() {
+      var hex = ['a', 'b', 'c', 'd', 'e', 'f', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9'];
+      var color = '#';
+      for (var i = 0; i < 6; i++) {
+        color += hex[Math.floor(Math.random() * hex.length)];
+      }
+      document.getElementById('landkid-header').style = 'color: ' + color;
+    }
+
+    setInterval(randomColor, 800);
   </script>
 </head>
 
 <body>
   <div id="page">
     <header>
-      <h1>Landkid</h1>
+      <marquee behavior="alternate" scrollamount="15"><h1 id="landkid-header">Landkid ⛰️🧒</h1></marquee>
     </header>
 
     <p>Landkid helps you avoid merge hell when merging pull requests.</p>
@@ -86,7 +139,11 @@
       </ul>
     </p>
 
-    <a class="circle-button" href="/current-state">ENTER LANDKID</a>
+    <a class="circle-button" href="/current-state">
+      <div class="circle-border-green"></div>
+      <div class="circle-border-red"></div>
+      GO
+    </a>
   </div>
 </body>
 
