--- a/src/static/index.html
+++ b/src/static/index.html
@@ -110,7 +110,7 @@
       }
     }
 
-    #hurry-up {
+    .message {
       margin-top: 50px;
       text-align: center;
       color: red;
@@ -144,6 +144,34 @@
       var hurryUp = document.getElementById('hurry-up');
       hurryUp.classList.remove('hidden');
     }, 60000);
+
+    function cheats() {
+      alert('Did you actually expect that to do something? 🤦‍');
+    }
+
+    var allowedKeys = {
+      37: 'left',
+      38: 'up',
+      39: 'right',
+      40: 'down',
+      65: 'a',
+      66: 'b'
+    };
+    var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
+    var konamiCodePosition = 0;
+    document.addEventListener('keydown', function(e) {
+      var key = allowedKeys[e.keyCode];
+      var requiredKey = konamiCode[konamiCodePosition];
+      if (key == requiredKey) {
+        konamiCodePosition++;
+        if (konamiCodePosition == konamiCode.length) {
+          cheats();
+          konamiCodePosition = 0;
+        }
+      } else {
+        konamiCodePosition = 0;
+      }
+    });
   </script>
 </head>
 
@@ -170,10 +198,10 @@
       GO
     </a>
 
-    <p id="hurry-up" class="hidden">😡 What are you still doing here, go check out Landkid!! 😡</p>
+    <p id="hurry-up" class="message hidden">😡 What are you still doing here, go check out Landkid!! 😡</p>
   </div>
 
-  <p id="liability">Jack Gardner is not liable for any injuries induced by viewing this page</p>
+  <p id="liability">Jack Gardner accepts no liability for any damages incurred from viewing the content of this page.</p>
 </body>
 
 </html>
