User note prototype

--- a/src/static/current-state/index.html
+++ b/src/static/current-state/index.html
@@ -59,6 +59,17 @@
 </head>
 
 <body>
+  <svg width="0" height="0" style="position:absolute">
+    <symbol viewBox="0 0 24 24" id="ak-icon-add">
+      <path d="M13 11V3.993A.997.997 0 0 0 12 3c-.556 0-1 .445-1 .993V11H3.993A.997.997 0 0 0 3 12c0 .557.445 1 .993 1H11v7.007c0 .548.448.993 1 .993.556 0 1-.445 1-.993V13h7.007A.997.997 0 0 0 21 12c0-.556-.445-1-.993-1H13z" fill="currentColor" fill-rule="evenodd"/>
+    </symbol>
+    <symbol viewBox="0 0 24 24" id="ak-icon-cross">
+      <path d="M12 10.586L6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586z" fill="currentColor"/>
+    </symbol>
+    <symbol viewBox="0 0 24 24" id="ak-icon-edit">
+      <path d="M4.02 19.23a1 1 0 0 0 1.18 1.18l3.81-.78-4.21-4.21-.78 3.81zm5.921-2.62l-2.12-2.12L16.306 6h.002l2.121 2.121-8.489 8.49zm9.903-9.903l-2.12-2.122A1.997 1.997 0 0 0 16.308 4c-.512 0-1.024.195-1.415.585l-9.757 9.758 4.95 4.95 9.757-9.758a2 2 0 0 0 0-2.828z" fill="currentColor" fill-rule="evenodd"/>
+    </symbol>
+  </svg>
   <div id="app">Loading...</div>
 </body>
 
