--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -1,15 +1,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/@atlaskit/reduced-ui-pack@8.4.0/dist/bundle.css" />
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-          sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, 'Fira Sans', 'Droid Sans',
+          'Helvetica Neue', sans-serif;
         font-size: 14px;
         color: #333;
       }
