--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -7,9 +7,8 @@
     />
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-          sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+          'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
         font-size: 14px;
         color: #333;
       }
@@ -64,7 +63,7 @@
   </head>
 
   <body>
-    <div id="app">Loading Landkid....</div>
+    <div id="app" class="ac-content">Loading Landkid....</div>
 
     <script
       data-requirecontext="_"
