--- a/src/static/current-state/index.html
+++ b/src/static/current-state/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Landkid Status</title>
   <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@1.1.6" />
