--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -1,6 +1,16 @@
 <html>
+  <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      }
+  </style>
   <body>
-    <div id="app" class="ac-content">Loading Landkid....</div>
+    <div id="app" class="ac-content" style="min-height: 90px">
+      <div style="width:100%; display: flex; align-items: center; justify-content: center; font-weight: bold">
+        Loading Landkid....
+      </div>
+    </div>
 
     <script
       data-requirecontext="_"
