--- a/src/static/bitbucket/index.html
+++ b/src/static/bitbucket/index.html
@@ -1,21 +1,28 @@
 <html>
+<head>
+  <script>
+    if (window.parent !== window) {
+      window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
+    }
+  </script>
   <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       }
   </style>
-  <body>
-    <div id="app" class="ac-content" style="min-height: 90px">
-      <div style="width:100%; display: flex; align-items: center; justify-content: center; font-weight: bold">
-        Loading Landkid....
-      </div>
-    </div>
+</head>
+<body>
+<div id="app" class="ac-content" style="min-height: 90px">
+  <div style="width:100%; display: flex; align-items: center; justify-content: center; font-weight: bold">
+    Loading Landkid....
+  </div>
+</div>
 
-    <script
-      data-requirecontext="_"
-      data-requiremodule="connect-bitbucket"
-      src="https://bitbucket.org/atlassian-connect/all.js"
-    ></script>
-  </body>
+<script
+  data-requirecontext="_"
+  data-requiremodule="connect-bitbucket"
+  src="https://bitbucket.org/atlassian-connect/all.js"
+></script>
+</body>
 </html>
